fix alignment on reviews

--- a/src/css/scss/templates/_ratings.scss
+++ b/src/css/scss/templates/_ratings.scss
@@ -8,14 +8,6 @@
         }
     }
 
-
-    .read-ratings,
-    .write-review {
-        text-align: left;
-        position: absolute;
-
-    }
-
     .user-rating-count {
         text-align: center;
     }
